change project artifact-id

--- a/extra_credit_week1/pom.xml
+++ b/extra_credit_week1/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cs544.mum.edu</groupId>
-	<artifactId>exercise3-1</artifactId>
+	<artifactId>extra-credit-week1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
