Adding Spring Security Java Class

--- a/ea_final_project/src/main/resources/application.properties
+++ b/ea_final_project/src/main/resources/application.properties
@@ -10,4 +10,4 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 connection.pool.size=1
 entitymanager.packages.to.scan=mum.ea.project.domain
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
